--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>My Recipes!</h1>
+
+<div class="container floating" style="margin-top: 20px">
+    <div class="row">
+        <div class="center-pill">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h1 class="panel-title">My Recipes!</h1>
+                </div>
+            </div>
+            <div class="panel-body">
+                <table class="table hover-square">
+                    <thead class="tab-header-area">
+                    <tr>
+                        <th>id</th>
+                        <th>description</th>
+                    </tr>
+                    </thead>
+                    <tr th:each="recipe: ${recipes}">
+                        <td th:text="${recipe.getDescription()}"></td>
+                        <td th:text="${recipe.getIngredients()}"></td>
+                    </tr>
+                    <tr>
+                        <td>drugi</td>
+                        <td>opis drugiego</td>
+                    </tr>
+                </table>
+
+            </div>
+        </div>
+
+    </div>
+
+
+</div>
+
+
+
+
+
+
 </body>
 </html>
